--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "expo": "~52.0.46",
+    "expo-localization": "~16.0.1",
     "expo-status-bar": "~2.0.1",
+    "i18n-js": "^3.9.2",
     "react": "18.3.1",
     "react-native": "0.76.9"
   },
