--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "expo": "~52.0.46",
+    "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.18",
     "expo-localization": "~16.0.1",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
+    "expo-video-thumbnails": "~9.0.3",
     "i18n-js": "^3.9.2",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
